added functionality to render old list even after refreshing

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="taskList">
         <!--this div for list of tasks which will be added through javascript-->
       </div>
+      <button id="saveButton">Save Tasks</button>
     </div>
     <script src="script.js"></script>
   </body>
