--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
   <body>
     <h1>My Todo List</h1>
     <div id="main">
-      <div id="takeInput">
+      <div class="takeInput">
         <div id="inputBox">
-          <input type="text" id="inputTask" />
+          <input type="text" id="inputTask" placeholder="Add your new Task" />
         </div>
         <div id="checkButton">
           <btn id="doneButton">Done</btn>
         </div>
       </div>
+      <!-- <div class="takeInput">
+        <div id="SearchBox">
+          <input type="text" id="searchInput" placeholder="Search TaskS ..." />
+        </div>
+        <div id="checkButton">
+          <btn id="searchButton">Search</btn>
+        </div>
+      </div> -->
       <div id="taskList">
         <!--this div for list of tasks which will be added through javascript-->
       </div>
       <button id="saveButton">Save Tasks</button>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
