search feature added

--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
           <btn id="doneButton">Done</btn>
         </div>
       </div>
-      <!-- <div class="takeInput">
-        <div id="SearchBox">
-          <input type="text" id="searchInput" placeholder="Search TaskS ..." />
-        </div>
-        <div id="checkButton">
-          <btn id="searchButton">Search</btn>
-        </div>
-      </div> -->
+      <div class="takeInput">
+        <input type="text" id="searchInput" placeholder="Search TaskS ..." />
+      </div>
+
       <div id="taskList">
         <!--this div for list of tasks which will be added through javascript-->
       </div>
