--- a/index.html
+++ b/index.html
@@ -4,26 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <h1>My Todo List</h1>
+
+    <div id="addTaskForm">
+      <form id="taskForm">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" />
+
+        <label for="description">Description:</label>
+        <input type="text" id="description" name="description" />
+
+        <label for="priority">Set Priority:</label>
+        <select name="prioirty" id="priority">
+          <option value="Low">Low</option>
+          <option value="Medium">Medium</option>
+          <option value="High">High</option>
+        </select>
+
+        <label for="dueDate">Due Date:</label>
+        <input type="date" id="dueDate" name="dueDate" />
+
+        <label for="category">Category:</label>
+        <select name="category" id="category">
+          <option value="Work">Work</option>
+          <option value="Personal">Personal</option>
+          <option value="Study">Study</option>
+        </select>
+
+        <button id="saveForm">Done</button>
+      </form>
+    </div>
+
     <div id="main">
       <div class="takeInput">
-        <div id="inputBox">
-          <input type="text" id="inputTask" placeholder="Add your new Task" />
-        </div>
-        <div id="checkButton">
-          <btn id="doneButton">Done</btn>
-        </div>
+        <button id="addTaskbtn">Add task</button>
       </div>
       <div class="takeInput">
-        <input type="text" id="searchInput" placeholder="Search TaskS ..." />
+        <input type="text" id="searchInput" placeholder="Search Tasks ..." />
       </div>
 
       <div id="taskList">
-        <!--this div for list of tasks which will be added through javascript-->
+        <div class="task-card">
+          <!-- Left section -->
+          <div class="task-main">
+            <!-- Title row -->
+            <div class="task-header">
+              <input type="checkbox" class="task-checkbox" />
+
+              <label class="task-title">Playing</label>
+
+              <span class="task-priority low">Low</span>
+            </div>
+
+            <!-- Meta info -->
+            <div class="task-meta">
+              <span class="task-due-date">Due: 20 Jan 2026</span>
+              <span class="task-category">Personal</span>
+            </div>
+
+            <!-- Description -->
+            <p class="task-desc">
+              This will contain the description of the task.
+            </p>
+          </div>
+
+          <!-- Action buttons -->
+          <div class="task-actions">
+            <button class="btn edit-btn">Edit</button>
+            <button class="btn delete-btn">Remove</button>
+          </div>
+        </div>
       </div>
+
       <button id="saveButton">Save Tasks</button>
     </div>
     <script type="module" src="js/app.js"></script>
