--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
       </div>
       <div class="takeInput">
         <input type="text" id="searchInput" placeholder="Search Tasks ..." />
+        <button id="sortbtn">Sort</button>
+        <div id="choiceForSort">
+        <select id="sortSelect">
+          <option value="none">None</option>
+          <option value="dueDate">Due Date</option>
+          <option value="priority">Priority</option>
+        </select>
+        </div>
       </div>
 
       <div id="taskList">
