added frontend input validation and backend input validation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1>My Todo List</h1>
-
     <div id="addTaskForm">
       <form id="taskForm">
         <label for="title">Title:</label>
@@ -34,6 +33,8 @@
           <option value="Study">Study</option>
         </select>
 
+        <p id="invalidInput"></p>
+        
         <button id="saveForm">Done</button>
       </form>
     </div>
